--- a/latex_files/acl_latex.tex
+++ b/latex_files/acl_latex.tex
@@ -26,15 +26,20 @@
 % For proper rendering and hyphenation of words containing Latin characters (including in bib files)
 
 %\usepackage{devanagari}
+\usepackage{afterpage,refcount}
+\newcommand{\setfootnotemark}{%
+  \refstepcounter{footnote}%
+  \footnotemark[\value{footnote}]}
 \usepackage{times}
 \usepackage[T1]{fontenc}
 \usepackage{polyglossia} % Automatically loads fontspec
 \setmainlanguage{english}
-\setmainfont{Times New Roman}
+\setmainfont{NimbusRomNo9L-Regu}
+%\setmainfont{Times New Roman}
 \setotherlanguages{hindi}
-\setotherlanguages{arabic}
 \newfontfamily\hindifont{Hind-Light.ttf}[Script=Devanagari] % \texthindi{}
-\newfontfamily\arabicfont{Amiri-Regular.ttf}[Script=Arabic] % \textarabic{}
+%\setotherlanguages{arabic}
+%\newfontfamily\arabicfont{Amiri-Regular.ttf}[Script=Arabic] % \textarabic{}
 
 % This assumes your files are encoded as UTF8
 \usepackage[utf8]{inputenc}
@@ -50,12 +55,13 @@
 
 \title{\textbf{Separating Hate Speech and Offensive Language Classes via Adversarial Debiasing}}
 
-\author{\textbf{Shuzhou Yuan} \and
-\textbf{Antonis Maronikolakis} \and
-\textbf{Hinrich Schütze}
-}
+\author{Shuzhou Yuan \thanks{\quad The work was done while at LMU Munich.} \\ Karlsruhe Institute of Technology \\  shuzhou.yuan@kit.edu
+         \And 
+         Antonis Maronikolakis \\ CIS, LMU Munich\\ antmarakis@cis.lmu.de
+         \And
+         Hinrich Schütze \\ CIS, LMU Munich }
 
-\date{\texttt{shuzhou.yuan@outlook.com} ~~~~~ \texttt{antmarakis@cis.lmu.de}}
+
 
 \begin{document}
 	\maketitle
@@ -86,7 +92,7 @@
 	
 	We experiment with different architectures for the classifier (\texttt{BERT} \cite{devlin2019bert}, \texttt{DistilBERT} \cite{sanh2020distilbert}) and the adversary (\texttt{BERT}, \texttt{DistilBERT} and LSTMs \cite{lstm}). We perform hyperparameter tuning on English data before applying our findings on several languages (German, Arabic and Hindi) diverse in script, typography and grammar, as well as on a multilingual task setting using \texttt{mBERT}. To more objectively frame the benefit of our method, we compare against a battery of baselines, while we also perform error analysis to identify patterns where our method helps.
 	
-	In summary, our contributions\footnote{Code available at REMOVED\_FOR\_ANONYMITY} are: \begin{enumerate*}[label={\textbf{\roman{*})}}]
+	In summary, our contributions\footnote{Code available at \url{https://github.com/ShuzhouYuan/hate_speech_adversarial_debiasing}} are: \begin{enumerate*}[label={\textbf{\roman{*})}}]
 		\item Employing adversarial debiasing to separate hate speech and offensive language
 		\item Showing that our method works in keeping false negatives to a minimum and increasing F1-scores on multiple English datasets
 		\item Generalizing our findings to other languages, including a multilingual setting.
@@ -179,7 +185,7 @@
 	
 	
 	\subsection{English}
-	\textbf{Davidson17.} \citet{davidson} is a well-studied English hate speech dataset collected from Twitter. It contains 25K tweets that are annotated as hate speech, offensive (but not hate) speech, or neither hate speech nor offensive language. The definition of hate speech and offensive language is the same as in \S\ref{intro}. We utilize this dataset's development set for the early phase of experimentation to make design decisions, eg. selecting model architectures, hyperparameters, baselines, etc.
+	\textbf{Davidson17.} \citet{davidson} is a well-studied English hate speech dataset collected from Twitter. It contains 25K tweets that are annotated as hate speech, offensive (but not hate) speech, or neither hate speech nor offensive language. The definition of hate speech and offensive language is the same as in \S\ref{intro}. We utilize this dataset's development set for the early phase of experimentation to make design decisions, e.g. selecting model architectures, hyperparameters, baselines, etc.
 	
 	\textbf{Founta18.} \citet{founta} contains 100K English samples collected from Twitter. The definition of hate speech is the usual definition (as described in \S\ref{intro}), while the \textit{abusive language} class is defined as any impolite content using profanity, which is equivalent to the definition of offensive language. Thus, we regard it as offensive language for our experiments.
 	
@@ -240,7 +246,7 @@
 	The loss function is the same as in \citet{wadsworth2018achieving,adversarial_training_aae_hatespeech}, with $loss_{adversary}$ being the loss of the adversary for its task, $loss_{classifier}$ the loss of the classifier for the original task (hate speech vs. offensive language vs. neither) and $\alpha$ being a parameter to regulate the effect of $loss_{adversary}$. \citet{adversarial_training_aae_hatespeech} found that the value should be neither too large nor too small. Empirically, they set $\alpha$=0.05. After some hyperparameter tuning, we found that in this setup an $\alpha$ value of 0.05 was the best-performing.
 	Under $loss_{total}$, the classifier minimizes its original loss while maximizing the adversary's loss. As a result, the classifier is encouraged to actively develop diverging representations for the two classes.
 	
-	\textbf{Adversary discriminates between hate speech and offensive language (\texttt{Adversary$_{sep}$}).} We also experiment with another adversarial setup: the adversary acts like ``support", actively aiding the classifier in separating hate speech from offensive language. This is accomplished by employing an adversary that learns to model the "offensiveness" property, by discriminating between the \textit{hate speech}/\textit{neither} classes and \textit{offensive language}. Since this method is aimed at directly helping the classifier, instead of subtracting this adversary loss, we \textit{add} it instead:
+	\textbf{Adversary discriminates between hate speech and offensive language (\texttt{Adversary$_{sep}$}).} We also experiment with another adversarial setup: the adversary acts like ``support", actively aiding the classifier in separating hate speech from offensive language. This is accomplished by employing an adversary that learns to model the ``offensiveness" property, by discriminating between the \textit{hate speech}/\textit{neither} classes and \textit{offensive language}. Since this method is aimed at directly helping the classifier, instead of subtracting this adversary loss, we \textit{add} it instead:
 	$$loss_{total}=loss_{classifier}+\alpha*loss_{adversary}.$$
 	
 	For this setup, we set the $\alpha$ hyperparameter to 2. The value of $\alpha$ was tuned on the development set of \textit{Davidson17}, achieving the highest true positive rate for hate speech.
@@ -318,15 +324,15 @@
 	
 	For \textit{Davidson17} and \textit{Founta18}, our method does not provide positive findings. In \textit{Davidson17} both TPH and overall performance are lower, while in \textit{Founta18}, adversarial debiasing does provide a performance boost, but it comes at the expense of TPH. For these two datasets, \texttt{Adversary$_{swear}$} was applied as well, improving the TPH for \textit{Davidson17} but not for \textit{Founta18}.
 	
-	Results are better for the final English dataset, \textit{HasocEn19}. There, even though TPH drops substantially (10\%), overall performance increases by more than 20\%. Without an adversary, accuracy and F1-scores suffer, making for sub-par classifiers biased heavily towards hate speech. Instead, with our method, more separation is achieved and the model manages to separate the two contentious classes (\textit{hate speech} and \textit{offensive language}) with greater efficiency. Whereas before the classifier would not be practical due to low accuracy, with our method F1-scores and accuracy increase to acceptable levels.
+	Results are better for the final English dataset, \textit{HasocEn19}. There, even though TPH drops substantially (10\%), overall performance increases by more than 0.2 F1 points. Without an adversary, accuracy and F1-scores suffer, making for sub-par classifiers biased heavily towards hate speech. Instead, with our method, more separation is achieved and the model manages to separate the two contentious classes (\textit{hate speech} and \textit{offensive language}) with greater efficiency. Whereas before the classifier would not be practical due to low accuracy, with our method F1-scores and accuracy increase to acceptable levels.
 	
-	\textit{HasocDe19} follows the same pattern, with the vanilla model being unable to provide strong overall results, instead becoming biased towards hate speech and dropping the rest of the classes. With our method, better balance is struck and we see an improvement of 15\% over the vanilla model.
+	\textit{HasocDe19} follows the same pattern, with the vanilla model being unable to provide strong overall results, instead becoming biased towards hate speech and dropping the rest of the classes. With our method, better balance is struck and we see an improvement of 0.15 F1-score over the vanilla model.
 	
-	In \textit{GermEval18}, we see stronger performance gains both for the TPH (+5.7\% over the non-adversary model) and overall (+2\% in F1-score). Even though the class-weighting baseline does score higher in TPH, we note a drop in F1-scores and accuracy.
+	In \textit{GermEval18}, we see stronger performance gains both for the TPH (+5.7\% over the non-adversary model) and overall (+0.02 in F1-score). Even though the class-weighting baseline does score higher in TPH, we note a drop in F1-scores and accuracy.
 	
 	For \textit{HasocHin19}, we observe the same pattern as the other \textit{Hasoc} family of datasets, although to a lesser extent. In \textit{L-HSAB19}, we show that the simple class-weighting baselines is better than both the vanilla and adversary models.
 	
-	Finally, in the multilingual setting, we get mixed results. Compared to the vanilla model, adversarial debiasing offers a better TPH score with minimal drop in performance (while macro F1 increases by 2\% too). Against the baseline model, while the baseline has a higher TPH, in all the other metrics performance is worse.
+	Finally, in the multilingual setting, we get mixed results. Compared to the vanilla model, adversarial debiasing offers a better TPH score with minimal drop in performance (while macro F1 increases by 0.02 too). Against the baseline model, while the baseline has a higher TPH, in all the other metrics performance is worse.
 	
 	\begin{table*}[t!]
 		\centering
@@ -417,12 +423,13 @@
 			de & @user @user Glaubte Du echt, eine Frau mit befriedigendem Sexleben rennt durch die Welt und sieht überall böse Männer und sexuelle Gewalt? \textit{(@user @user Did you really believe that a woman with a satisfying sex life runs through the world and sees evil men and sexual violence everywhere?)}  & hate & offensive & hate\\\hline
 			de & @user Genau. Die Froschfresser haben nichts gelernt! Ihr Untergang ist selbstverschuldet. \textit{(@user Exactly. The frog eaters haven't learned anything! Your downfall is self-inflicted.)} & hate & offensive & hate\\\hline
 			hindi& {\hindifont झोंपड़ी के, कुछ दिन पहले तक तो तू उस आदतन 'बाइक चोर' तबरेज के लिये छाती पीट रहा था। हर चैनल पर रंडी रोना मचा रखा था। अब सेक्युलरिज्म का 'अखरोट' अपने पिछवाड़े से तोड़ने की कोशिश कर रहा है। आतंकी साला} \textit{(Of the hut, till a few days ago, you were habitually beating your chest for that `bike thief' Tabrez. Randi was crying on every channel. Now the `nut' of secularism is trying to break from its backyard. terrorist brother)} & offensive & hate & offensive\\\hline
-			arabic& {\arabicfont  ما في اي شك بس الدروز كلاب و خونة} \textit{(True, there is no doubt, but the Druze are dogs and traitors)} & hate & offensive & hate\\\hline
+			arabic& ma fy ay shk bs aldrwz klab w khwnh\setfootnotemark\label{first} \textit{(True, there is no doubt, but the Druze are dogs and traitors)} & hate & offensive & hate\\\hline
 		\end{tabular}
-		\caption{Error analysis on predictions \texttt{DistilBERT} predictions versus actual predictions for the examined languages.\label{error_analysis}}
+		\caption{Error analysis on \texttt{DistilBERT} predictions versus actual labels for the examined languages.\label{error_analysis}}
+		\afterpage{\afterpage{\footnotetext[\getrefnumber{first}]{Example transliterated.}}}
 	\end{table*}
 	
-	We observe that a few samples of hate speech are misclassified as offensive language by the vanilla model without the adversary, but correctly predicted by the adversarial model. In Table \ref{error_analysis}, we collect 6 examples from different languages, which indicate the significant improvement of adversarial models.
+	We observe that a few samples of hate speech are misclassified as offensive language by the vanilla model without the adversary, but correctly predicted by the adversarial model. In Table \ref{error_analysis}, we show six examples which indicate the significant improvement of adversarial models.
 	
 	In English, we see that hateful speech was marked as merely offensive by the vanilla model, potentially because no slur was used, but only some offensive language (`c*nt', `ass' and `bad ass'). The model failed to take into account the context in which these words were used, or failed to pick up innocuous words used here as slurs (for example, `orangutan'). The adversarial model was able to make correct predictions, potentially because it is not putting as much weight on individual words, but the combinations between them.
 	
@@ -435,15 +442,19 @@
 	
 	In hate speech detection efforts, it can be observed that a lot of classifiers struggle with the \textit{hate speech} and \textit{offensive language} classes. A lot of models trained on current datasets misclassify hate speech as offensive language. We argue that this type of error is particularly insidious, since it can lead to targeted groups getting exposed to harmful content more often. Further, a lot of hate speech classifiers are impractical, either having a low true positive rate for hate speech or low performance overall.
 	
-	We propose a method to both increase the true positive rate for hate speech, but to also stabilize the classifiers in general. We base our method on the adversarial debiasing setup, where in our instance we are trying to support the classifier in separating the \textit{hate speech} and \textit{offensive language} classes.
+	We propose a method to both increase the true positive rate for hate speech and to stabilize the classifiers in general. We base our method on the adversarial debiasing setup, where in our instance we are trying to support the classifier in separating the \textit{hate speech} and \textit{offensive language} classes.
 	
-	We evaluate our method on seven hate speech datasets spanning four languages, plus an additional multilingual dataset we create by combining the datasets at hand. Our method is at best performing just as well for all datasets except \textit{L-HSAB19}, while also outperforming baseline models in multiple occasions. Error analysis reveals that the debiased model is able to move past keyword-based predictions, taking into account the context as well. We find that both the true positive rate for hate speech is improved and overall performance is also higher, showcasing the stabilizing capabilities of our novel methodology on hate speech datasets.
+	We evaluate on seven hate speech datasets spanning four languages, plus a multilingual set we create by combining all data. Our method is at best performing just as well for all datasets except \textit{L-HSAB19}, while also outperforming baseline models on multiple occasions. Error analysis reveals that the debiased model moves past keyword-based predictions, taking into account the context as well. Both the true positive rate for hate speech and overall performance are improved, showcasing the stabilizing capabilities of our novel methodology on hate speech detection.
 	
 	\section{Ethical Considerations}
 	
 	In our work we deal with hate speech, which could potentially cause harm (directly or indirectly) to vulnerable social groups. We do not support the views expressed in these hateful posts, we merely venture to analyze and provide solutions to mitigate this online phenomenon.
 	
 	Further, we could only examine a specific problem (neutral vs. offensive vs. hateful language) in specific languages. This is a non-exhaustive list and there is a lot we did not cover. Care should be taken to use these methods only in the examined languages since generalization may not be feasible (in fact, we show there are issues with our method in Arabic).
+	
+	\section{Acknowledgments}
+	
+	The second author was partly supported by the European Research Council (\#740516).
 	
 	
 	
